Replaced parameters that took MethodModel with MethodModelCopy